# lambda-lilac

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  as3_files_list.as3  bash_files_list.bash  bat_files_list.bat  c_files_list.c  cc_files_list.cc  cmake_files_list.cmake  conf_files_list.conf  cpp_files_list.cpp  cs_files_list.cs  css_files_list.css  cxx_files_list.cxx  d_files_list.d  doc_files_list.doc  docs_files_list.docs  fb_files_list.fb  files_stats  frag_files_list.frag  glsl_files_list.glsl  go_files_list.go  h_files_list.h  hlsl_files_list.hlsl  hpp_files_list.hpp  hxx_files_list.hxx  inc_files_list.inc  inl_files_list.inl  ipp_files_list.ipp  ipynb_files_list.ipynb  java_files_list.java  js_files_list.js  jsx_files_list.jsx  kt_files_list.kt  lua_files_list.lua  make_files_list.make  md_files_list.md  (+16 more)
src/: CMakeLists.txt  files_stats
src/builder/: CMakeLists.txt  main.cc
src/engine/: CMakeLists.txt  cef-helper.cc  main.cc
src/engine/assets/: asset.cc  asset.h  asset_handle.h  asset_manager.cc  asset_manager.h  mesh.cc  mesh.h  mesh_io.cc  mesh_io.h  shader.cc  shader.h  shader_io.cc  shader_io.h  shader_pass.cc  shader_pass.h  shader_program.cc  shader_program.h  texture.cc  texture.h  violet_texture.h  wave.cc  wave.h
src/engine/gui/: file_system.cc  file_system.h  font_handler.cc  font_handler.h  gpu_driver.cc  gpu_driver.h  gui.cc  gui.h  gui_value.cc  gui_value.h
src/engine/imgui/: dear_imgui.cc  dear_imgui.h  no_imgui.h  nuklear_imgui.cc  nuklear_imgui.h
src/engine/input/: controller.cc  controller.h  input.h  input_manager.h  keyboard.h  mouse.h
src/engine/interfaces/: icomponent.cc  icomponent.h  iimgui.h  iphysics.h  irenderer.h  irenderer_flush.cc  irenderer_flush.h  iscript_context.h  isystem.h  iwindow.h  iworld.cc  iworld.h
src/engine/physics/: physics_visualizer.cc  physics_visualizer.h  physics_world.cc  physics_world.h
src/engine/physics/bullet/: bullet_physics_visualizer.cc  bullet_physics_visualizer.h  bullet_physics_world.cc  bullet_physics_world.h  physics_visualizer.cc  physics_visualizer.h  physics_world.cc  physics_world.h
src/engine/physics/newton/: newton_physics_visualizer.cc  newton_physics_visualizer.h  newton_physics_world.cc  newton_physics_world.h
src/engine/physics/react/: physics_visualizer.cc  physics_visualizer.h  physics_world.cc  physics_world.h  react_physics_visualizer.cc  react_physics_visualizer.h  react_physics_world.cc  react_physics_world.h
src/engine/platform/: blend_state.h  culling.cc  culling.h  debug_renderer.cc  debug_renderer.h  depth_stencil_state.h  frustum.cc  frustum.h  post_process_manager.cc  post_process_manager.h  rasterizer_state.h  render_target.h  sampler_state.h  scene.cc  scene.h  shader_pass.h  shader_variable.h  shader_variable_manager.cc  shader_variable_manager.h
src/engine/renderers/d3d11/: d3d11_context.cc  d3d11_context.h  d3d11_default_shader.h  d3d11_mesh.cc  d3d11_mesh.h  d3d11_mip_map_generator.h  d3d11_renderer.cc  d3d11_renderer.h  d3d11_shader.cc  d3d11_shader.h  d3d11_state_manager.cc  d3d11_state_manager.h  d3d11_texture.cc  d3d11_texture.h
src/engine/renderers/metal/: metal_cpp.h  metal_cpp.mm  metal_renderer.cc  metal_renderer.h  shader.metal
src/engine/renderers/no/: no_renderer.cc  no_renderer.h
src/engine/renderers/vulkan/: vulkan.h  vulkan_device_manager.cc  vulkan_device_manager.h  vulkan_mesh.cc  vulkan_mesh.h  vulkan_pipeline_state_manager.cc  vulkan_pipeline_state_manager.h  vulkan_renderer.cc  vulkan_renderer.h  vulkan_shader.cc  vulkan_shader.h  vulkan_state_manager.cc  vulkan_state_manager.h  vulkan_texture.cc  vulkan_texture.h
src/engine/scripting/: script_binding.cc  script_binding.h  script_class.h  script_function.h  script_math.cc  script_math.h  script_noise.cc  script_noise.h  script_value.h  script_vector.cc  script_vector.h
src/engine/scripting/angel-script/: angel_script_context.cc  (+3 more)
src/engine/systems/: camera_system.cc  camera_system.h  collider_system.cc  collider_system.h  entity.cc  entity.h  entity_system.cc  entity_system.h  light_system.cc  light_system.h  lod_system.cc  lod_system.h  mesh_render_system.cc  mesh_render_system.h  mono_behaviour_system.cc  mono_behaviour_system.h  name_system.cc  name_system.h  particle_system.cc  particle_system.h  rigid_body_system.cc  rigid_body_system.h  skeleton_system.cc  skeleton_system.h  transform_system.cc  transform_system.h  wave_source_system.cc  wave_source_system.h
src/engine/utils/: angle.h  bvh.cc  bvh.h  decompose_matrix.h  distance.h  mesh_decimator.cc  mesh_decimator.h  mt_manager.cc  mt_manager.h  name.h  nav_mesh.cc  nav_mesh.h  register_meta.h  register_serializer.h  renderable.h  serializer.h  timer.cc  timer.h  zone_manager.cc  zone_manager.h
src/foundation/: CMakeLists.txt
src/foundation/assets/: base_asset_manager.cc  base_asset_manager.h  enums.h  mesh_manager.cc  mesh_manager.h  shader_manager.cc  shader_manager.h  shader_pass_manager.cc  shader_pass_manager.h  texture_manager.cc  texture_manager.h  wave_manager.cc  wave_manager.h
src/foundation/containers/: containers.h
src/foundation/memory/: eastl_allocator.cc  eastl_allocator.h  frame_heap.cc  frame_heap.h  iallocator.cc  iallocator.h  malloc_allocator.cc  malloc_allocator.h  memory.cc  memory.h  pointer_arithmetic.h
src/foundation/package/: package.cc  package.h
src/foundation/utils/: bitset.h  colour.cc  colour.h  console.cc  console.h  decompose_matrix.h  file_system.cc  file_system.h  profiler.cc  profiler.h  stack_trace.cc  stack_trace.h  timer.cc  timer.h  utilities.h
src/networking/: CMakeLists.txt  client.cc  client.h  dll.cc  dll.h  message.cc  message.h  message_manager.cc  message_manager.h  messages.h  networking.cc  networking.h  server.cc  server.h
src/packager/: CMakeLists.txt
src/packager/compilers/: mesh_compiler.cc  mesh_compiler.h  shader_compiler.cc  shader_compiler.h  shader_includer.cc  shader_includer.h  shader_pass_compiler.cc  shader_pass_compiler.h  texture_compiler.cc  texture_compiler.h  wave_compiler.cc  wave_compiler.h
(+280 files in other folders)
